--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,28 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 5th</h1>
-            <h3>Week 24 Day 5 (Navigation Layouts Day 1)</h3>
+            <h1>GDWD 105 - Agenda for July 8th</h1>
+            <h3>Week 25 Day 1 (Navigation Layouts Day 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         Would you rather:
                         <ul>
-                            <li>spend a week unable to go <b>outside</b> your home?</li>
-                            <li>spend a week unable to go <b>inside</b> your home?
+                            <li>get an extra hour in every day, or</li>
+                            <li>get an extra day every 24 days?</li>
                         </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/great-indoors.webp"
-                            alt="the great indoors"
+                            src="images/melty-time.webp"
+                            alt="melty time"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Content Layouts</li>
-                        <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
+                        <li><span class="type">Exercise</span>Client Navbars</li>
+                        <li><span class="type">Exercise</span>Media Queries</li>
                     </ul>
                 </div>
 
@@ -40,17 +40,22 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Content Layouts</li>
-                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
+                            <li><span class="type">Exercise</span>Client Navbars</li>
+                            <li><span class="type">PowerPoint</span>Responsive Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
+                            <li><span class="type">PowerPoint</span>Media Queries</li>
                             <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#navbars-basic" target="_blank">Navbars - Basic</a>
+                                <a 
+                                    href="https://first-gdwd.github.io/cookbook/demos.html#media-queries-v3"
+                                    target="_blank"
+                                >
+                                    Media Queries and Responsiveness
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -59,9 +64,9 @@
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
                             <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#navbars-basic" target="_blank">Navbars - Basic</a> (cont.)
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#media-queries-v3" target="_blank">Media Queries and Responsiveness</a> (cont.)
                             </li>
-                            <li><span class="type">Exercise</span>Client Navbars (?)</li>
+                            <li><span class="type">Exercise</span>Media Queries</li>
                         </ul>
                     </div>
                 </div>
