--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,28 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 8th</h1>
-            <h3>Week 25 Day 1 (Navigation Layouts Day 2)</h3>
+            <h1>GDWD 105 - Agenda for July 9th</h1>
+            <h3>Week 25 Day 2 (Navigation Layouts Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        Would you rather:
-                        <ul>
-                            <li>get an extra hour in every day, or</li>
-                            <li>get an extra day every 24 days?</li>
-                        </ul>
+                        If you could have any creature (either real or fantastical)
+                        as a pet, what would you choose?
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/melty-time.webp"
-                            alt="melty time"
+                            src="images/alt-animal-names.webp"
+                            alt="true names"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Client Navbars</li>
                         <li><span class="type">Exercise</span>Media Queries</li>
+                        <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
                     </ul>
                 </div>
 
@@ -40,33 +37,25 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Client Navbars</li>
-                            <li><span class="type">PowerPoint</span>Responsive Layouts</li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#media-queries-v3" target="_blank">Media Queries and Responsiveness</a> (cont.)
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Media Queries</li>
-                            <li><span class="type">Demo</span>
-                                <a 
-                                    href="https://first-gdwd.github.io/cookbook/demos.html#media-queries-v3"
-                                    target="_blank"
-                                >
-                                    Media Queries and Responsiveness
-                                </a>
-                            </li>
+                            <li><span class="type">Exercise</span>Media Queries</li>
+                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#media-queries-v3" target="_blank">Media Queries and Responsiveness</a> (cont.)
-                            </li>
-                            <li><span class="type">Exercise</span>Media Queries</li>
+                            <li><span class="type">Exercise</span>Modernizing George RR Martin (cont.)</li>
                         </ul>
                     </div>
                 </div>
