--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 10th</h1>
-            <h3>Week 25 Day 3 (Navigation Layouts Day 4)</h3>
+            <h1>GDWD 105 - Agenda for July 11th</h1>
+            <h3>Week 25 Day 4 (Navigation Layouts Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        Would you rather have the power of flight
-                        or the power to levitate objects?
+                        <li>
+                            Would you rather have: a bag that could hold anything, or
+                            your own pocket-dimension accessed via suitcase?
+                        </li>
                     </ul>
                     <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/broom-cats.jpg"
-                            alt="broom cats"
+                            src="images/hoarder-fox.webp"
+                            alt="hoarder fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Hover Galleries</li>
+                        <li><span class="type">Project</span>Dropdown Menu Site</li>
                     </ul>
                 </div>
 
@@ -36,10 +38,10 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-prep" target="_blank">
-                                    Hiding and Showing Content
+                            <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
+                            <li><span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-nav" target="_blank">
+                                    Dropdown Menus
                                 </a>
                             </li>
                         </ul>
@@ -48,22 +50,20 @@
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-prep" target="_blank">
-                                    Hiding and Showing Content
+                            <li><span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-nav" target="_blank">
+                                    Dropdown Menus
                                 </a>
                                 (cont.)
                             </li>
-                            <li><span class="type">Exercise</span>Hover Galleries</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site (cont.)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Hover Galleries</li>
-                            <li><span class="type">Project</span>Dropdown Menu Site</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site (cont.)</li>
                         </ul>
                     </div>
                 </div>
