--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 11th</h1>
-            <h3>Week 25 Day 4 (Navigation Layouts Day 5)</h3>
+            <h1>GDWD 105 - Agenda for July 12th</h1>
+            <h3>Week 25 Day 5 (Navigation Layouts LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have: a bag that could hold anything, or
-                            your own pocket-dimension accessed via suitcase?
+                            Would you rather have poor long-term or short-term memory?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container more-space blue-gray">
                         <img 
-                            src="images/hoarder-fox.webp"
-                            alt="hoarder fox"
+                            src="images/lab-fox.webp"
+                            alt="lab fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Dropdown Menu Site</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -38,32 +37,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
-                            <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-nav" target="_blank">
-                                    Dropdown Menus
-                                </a>
-                            </li>
+                            <li><span class="type">Lab Time</span>Past Exercises or Project</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-nav" target="_blank">
-                                    Dropdown Menus
-                                </a>
-                                (cont.)
-                            </li>
-                            <li><span class="type">Project</span>Dropdown Menu Site (cont.)</li>
+                            <li><span class="type">Lab Time</span>Extra Credit - E-commerce Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Dropdown Menu Site (cont.)</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
