--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 12th</h1>
-            <h3>Week 25 Day 5 (Navigation Layouts LAB DAY)</h3>
+            <h1>GDWD 105 - Agenda for July 15th</h1>
+            <h3>Week 26 Day 1 (FINALS WEEK)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have poor long-term or short-term memory?
+                            Would you rather be very smart or very strong?
                         </li>
                     </ul>
-                    <div class="img-container more-space blue-gray">
+                    <div class="img-container more-space dark-blue-gray">
                         <img 
-                            src="images/lab-fox.webp"
-                            alt="lab fox"
+                            src="images/buns-of-steel.webp"
+                            alt="buns of steel"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">N/A</span></li>
+                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
                     </ul>
                 </div>
 
@@ -37,21 +37,22 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Past Exercises or Project</li>
+                            <li><span class="type">Quiz</span>Navigation and Responsiveness</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Extra Credit - E-commerce Site</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
                         </ul>
                     </div>
                 </div>
