--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,27 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 17th</h1>
-            <h3>Week 26 Day 3 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for July 18th</h1>
+            <h3>Week 26 Day 4 (FINALS WEEK)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Do you have a favorite sport (either to watch or to play)? 
-                            If so, what is it?
+                            If you had to live without one of the five senses,
+                            which would you pick?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space reddish-black">
                         <img 
-                            src="images/fantasy-football.webp"
-                            alt="fantasy football"
+                            src="images/three-monkeys.jpeg"
+                            alt="three monkeys"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EVAL</span></li>
-                        <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                        <li><span class="type">PRESENTATIONS</span></li>
                     </ul>
                 </div>
 
@@ -37,23 +36,23 @@
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
 
-                        <h3>Period 1 (9:10am-11:20am)</h3>
+                        <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">FINAL EVAL</span></li>
+                            <li><span class="type">PRESENTATIONS</span></li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
-                        <h3>Period 2 (11:30am-12pm)</h3>
+                        <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                            <li><span class="type">PRESENTATIONS</span></li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Restaurant Site (Complete) [cont.]</li>
+                            <li><span class="type">Lab Time</span>Restaurant Site Feedback</li>
                         </ul>
                     </div>
                 </div>
