--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 18th</h1>
-            <h3>Week 26 Day 4 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for July 19th</h1>
+            <h3>Week 26 Day 5 (FINALS WEEK)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you had to live without one of the five senses,
-                            which would you pick?
+                            Would you rather have a photographic memory, or
+                            the ability to speedread at a superhuman level?
                         </li>
                     </ul>
-                    <div class="img-container more-space reddish-black">
+                    <div class="img-container more-space dark-blue">
                         <img 
-                            src="images/three-monkeys.jpeg"
-                            alt="three monkeys"
+                            src="images/owl.webp"
+                            alt="owl"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">PRESENTATIONS</span></li>
+                        <li><span class="type">FINAL EXAM</span></li>
+                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                        <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
                     </ul>
                 </div>
 
@@ -36,23 +38,24 @@
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
 
-                        <h3>Period 1 (9:10am-10:20am)</h3>
+                        <h3>Period 1 (9:10am-11:20am)</h3>
                         <ul>
-                            <li><span class="type">PRESENTATIONS</span></li>
+                            <li><span class="type">FINAL EXAM</span></li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
-                        <h3>Period 2 (10:30am-12pm)</h3>
+                        <h3>Period 2 (11:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PRESENTATIONS</span></li>
+                            <li><span class="type">PowerPoint</span>JavaScript Functions</li>
+                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Restaurant Site Feedback / Study for Final Exam</li>
+                            <li><span class="type">Lab Time</span>ANY REMAINING CODING ASSIGNMENTS</li>
                         </ul>
                     </div>
                 </div>
