--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,28 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 19th</h1>
-            <h3>Week 26 Day 5 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for July 22nd</h1>
+            <h3>Week 27 Day 1 (Career Development Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have a photographic memory, or
-                            the ability to speedread at a superhuman level?
+                            What is a skill that you wish you could be better at?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-blue">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/owl.webp"
-                            alt="owl"
+                            src="images/lab-experiment.webp"
+                            alt="overthinking fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EXAM</span></li>
-                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
-                        <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
+                        <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
+                        <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
                     </ul>
                 </div>
 
@@ -40,22 +38,22 @@
 
                         <h3>Period 1 (9:10am-11:20am)</h3>
                         <ul>
-                            <li><span class="type">FINAL EXAM</span></li>
+                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (11:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>JavaScript Functions</li>
-                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                            <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>ANY REMAINING CODING ASSIGNMENTS</li>
+                            <li><span class="type">PowerPoint</span>Cover Letter</li>
+                            <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
                         </ul>
                     </div>
                 </div>
