--- a/cookbook/recipes-cheatsheet.html
+++ b/cookbook/recipes-cheatsheet.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="seasonings.html" class="selected">
+                            <a href="seasonings.html">
                                 CSS
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
@@ -43,7 +43,7 @@
                     </div>
                     <div class="dropdown-menu">
                         <h2 class="dropdown-trigger">
-                            <a href="recipes.html">
+                            <a href="recipes.html" class="selected">
                                 Layouts
                                 <i class="fa-solid fa-chevron-down"></i>
                             </a>
