--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,27 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 25th</h1>
-            <h3>Week 27 Day 4 (Career Development Week)</h3>
+            <h1>GDWD 105 - Agenda for July 26th</h1>
+            <h3>Week 27 Day 5 (Career Development Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you had to pick one word to describe yourself,
-                            what would you pick?
+                            How do you feel about coding and web design
+                            now that the class is over?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-blue">
+                    <div class="img-container more-space final-black">
                         <img 
-                            src="images/overthinking.webp"
-                            alt="overthinking bunny"
+                            src="images/finalday.jpg"
+                            alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Creative Resume Sketches</li>
-                        <li><span class="type">Project</span>Creative Resume</li>
+                        <li><span class="type">Project</span>Freelancing I: Proposals</li>
+                        <li><span class="type">Project</span>Freelancing II: Invoices</li>
                     </ul>
                 </div>
 
@@ -39,24 +39,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Career Development Tips Refresher</li>
-                            <li><span class="type">Exercise</span>Creative Resume Sketches</li>
+                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Creative Resume</li>
+                            <li><span class="type">Project</span>Freelancing I: Proposals</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li>
-                                <li><span class="type">Project</span>Creative Resume [cont.]</li>
-                            </li>
+                            <li><span class="type">Project</span>Freelancing II: Invoices</li>
                         </ul>
                     </div>
                 </div>
